fix animation scroll top margin "jumping"

--- a/src/entities/HomeScreen/HomeScreen.module.scss
+++ b/src/entities/HomeScreen/HomeScreen.module.scss
@@ -9,7 +9,7 @@
 
 	img,
 	video {
-		transition: transform 1.2s, margin-top .8s;
+		transition: transform 1s, margin-top .8s;
 	}
 
 	&:not(.top) {
